--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Steps.Step4Activity"></activity>
+        <activity android:name=".Steps.Step7Activity"></activity>
+        <activity android:name=".Steps.Step6Activity" />
+        <activity android:name=".Steps.Step5Activity" />
+        <activity android:name=".Steps.Step4Activity" />
         <activity android:name=".Steps.Step3Activity" />
         <activity android:name=".Steps.Step2Activity" />
         <activity android:name=".Steps.Step1Activity" />
