--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Steps.Step7Activity"></activity>
-        <activity android:name=".Steps.Step6Activity" />
-        <activity android:name=".Steps.Step5Activity" />
-        <activity android:name=".Steps.Step4Activity" />
-        <activity android:name=".Steps.Step3Activity" />
-        <activity android:name=".Steps.Step2Activity" />
-        <activity android:name=".Steps.Step1Activity" />
-        <activity android:name=".RooActivity" />
+        <activity android:name=".Steps.Step7Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".Steps.Step6Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".Steps.Step5Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".Steps.Step4Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".Steps.Step3Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".Steps.Step2Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".Steps.Step1Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".RooActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
             android:name=".TestSwiActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
