--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.r0adkll:slidableactivity:2.1.0'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
 }
